# CV_SHORT_PROJECT

./: Hough.m  README.md  example_video_reader.m  votingLines.m  zbuffer_cdata.m
HOUGH_C++/: CMakeLists.txt  CV_SHORT_PROJECT.kdev4
HOUGH_C++/include/: histogram.h  lines.h
HOUGH_C++/src/: histogram.cpp  lines.cpp  main.cpp
Videos/: TLRC_12sec.avi
